# zerofootprint

./: .gitignore
backend/: db.py  main.py  pyproject.toml  requirements.txt  settings.py  worker.py
backend/gmail/: auth.py  client.py
backend/models/: email_connection.py  privacy_request.py  request_log.py  service_account.py  user.py
backend/routers/: auth.py  gmail.py  requests.py  services.py
backend/security/: crypto.py  deps.py  dev_api.py  jwt.py
backend/services/: gmail_service.py  jobs.py  parsing.py  rate_limit.py  redis_client.py  requests.py  scan.py  scan_job.py  status_sync.py  templates.py
backend/tests/: conftest.py  test_dedup.py  test_parsing.py  test_request_flow.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  ShieldMark3D.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: AuthCallback.tsx  Dashboard.tsx  GmailCallback.tsx  Landing.tsx  Requests.tsx  ServiceDetail.tsx
mcp/: requirements.txt  server.py
